fix: header size and spacing

--- a/src/components/announcement/card/card.font.css
+++ b/src/components/announcement/card/card.font.css
@@ -2,8 +2,8 @@
     font-family: IBM Plex Sans;
     font-style: normal;
     font-weight: 500;
-    font-size: 15px;
-    line-height: 19px;
+    font-size: 17px;
+    line-height: 30px;
     color: #FFFFFF;
 }
 
@@ -12,7 +12,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 15px;
     text-align: justify;
     color: #FFFFFF;
 }
